# crafting-interpreters

./: .gitignore  .merlin  .ocamlinit  README.md  dune  dune-project  environment.ml  error.ml  interpreter.ml  lox.opam  main.ml  parser.ml  scanner.ml  scanner.mli  value.ml  value.mli
lib/: .ocamlinit  dune  environment.ml  interpreter.ml  lox.ml  loxError.ml  parser.ml  resolver.ml  scanner.ml  value.ml
test/: .merlin  dune  test.ml
test/test_files/: make_expected.py  test_fibonacci.lox  test_globals.expected
test/test_files/_other/: test_globals.lox
test/test_files/assignment/: associativity.expected  global.expected  syntax.expected
test/test_files/block/: scope.expected
test/test_files/bool/: equality.expected
test/test_files/closure/: assign_to_closure.expected  assign_to_shadowed_later.expected  shadow_closure_with_local.expected
test/test_files/expressions/: parse.expected
test/test_files/for/: closure_in_body.expected  scope.expected  syntax.expected
test/test_files/function/: parameters.expected  print.expected
test/test_files/if/: else.expected  if.expected  truth.expected
test/test_files/logical_operator/: and.expected  and_truth.expected  or.expected  or_truth.expected
test/test_files/number/: literals.expected  nan_equality.expected
test/test_files/operator/: add.expected  comparison.expected  equals.expected  multiply.expected  negate.expected  not.expected  not_equals.expected
test/test_files/scanning/: identifiers.expected  keywords.expected  numbers.expected  punctuators.expected  strings.expected  whitespace.expected
(+6 files in other folders)
